--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="main.css" rel="stylesheet">
   <script src="main.js" defer></script>
   <title>Music Search</title>
 </head>
+<h1>Itunes</h1>
+
+<form class="the-form">
+
+<div class ="scroller"><center><input class="user-search" placeholder="Search your Itunes" value=""></input>
+
+  <button class="search-button">search</button></center>
+<audio src="" value="" controls autoplay></audio></div>
+
+<h2>Search Results:</h2>
+
+<div class="result-container"></div>
+</form>
+
 <body>
 </body>
 </html>
